test/files/neg/bug677.scala
object ga {
  val zx: All = {() => 4}
}