test/files/neg/bug677.check
bug677.scala:2 error: type mismatch;
 found   : () => scala.Int
 required: scala.All
  val zx: All = {() => 4}
                    ^
one error found
